# journal_tracker

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: Journal Tracking.xlsx
src/citation/: citation.py  parser.py
tests/: test_outliers.py
tests/expected_output/: expected_output.xlsx
